--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <button id="stop-button" class="button-xl" title="Stop Transcription" disabled="true"><i
                         class="fa fa-stop-circle"></i> Stop
                 </button>
-                <button id="reset-button" class="button-xl button-secondary" title="Clear Transcript"> 
+                <button id="reset-button" class="button-xl button-secondary" title="Clear Transcript">
                     Clear Transcript
                 </button>
             </div>
@@ -95,6 +95,7 @@
     </a>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.2.15.min.js"></script>
     <script src="dist/main.js"></script>
 </body>
 
