--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="row">
             <div class="col">
-                <label>Input Language: </label>
+                <label>Source Language: </label>
                 <select id="language">
                     <optgroup label="English">
                         <option value="en-US">US English (en-US)</option>
@@ -39,13 +39,13 @@
                 </select>
             </div>
             <div class="col">
-                <label>Output Language:</label>
+                <label>Target Language:</label>
                 <select id="translateTo">
-                    <option value="he">Hebrew</option>
                     <option value="fr">French</option>
                     <option value="es">Spanish</option>
                     <option value="ru">Russian</option>
-                    <option value="en">English</option>
+                    <option value="he">Hebrew</option>
+                    <option value="en" disabled="true">English</option>
                 </select>
             </div>
         </div>
