--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
             <div class="col">
                 <label>Target Language:</label>
                 <select id="translateTo">
-                    <option value="fr">French</option>
-                    <option value="es">Spanish</option>
-                    <option value="ru">Russian</option>
-                    <option value="he">Hebrew</option>
+                    <option value="ar">Arabic</option>
                     <option value="en" disabled="true">English</option>
+                    <option value="fr">French</option>
+                    <option value="de">German</option>
+                    <option value="he">Hebrew</option>
+                    <option value="jp">Japanese</option>
+                    <option value="ru">Russian</option>
+                    <option value="es">Spanish</option>
                 </select>
             </div>
         </div>
