--- a/index.html
+++ b/index.html
@@ -41,14 +41,27 @@
             <div class="col">
                 <label>Target Language:</label>
                 <select id="translateTo">
-                    <option value="ar">Arabic</option>
-                    <option value="en" disabled="true">English</option>
-                    <option value="fr">French</option>
-                    <option value="de">German</option>
-                    <option value="he">Hebrew</option>
-                    <option value="jp">Japanese</option>
-                    <option value="ru">Russian</option>
-                    <option value="es">Spanish</option>
+                  <option value="ar">Arabic</option>
+                  <option value="zh">Chinese (Simplified)</option>
+                  <option value="zh-TW">Chinese (Traditional)</option>
+                  <option value="cs">Czech</option>
+                  <option value="da">Danish</option>
+                  <option value="nl">Dutch</option>
+                  <option value="en">English</option>
+                  <option value="fi">Finnish</option>
+                  <option value="fr">French</option>
+                  <option value="de">German</option>
+                  <option value="he">Hebrew</option>
+                  <option value="id">Indonesian</option>
+                  <option value="it">Italian</option>
+                  <option value="ja">Japanese</option>
+                  <option value="ko">Korean</option>
+                  <option value="pl">Polish</option>
+                  <option value="pt">Portuguese</option>
+                  <option value="ru">Russian</option>
+                  <option value="es">Spanish</option>
+                  <option value="sv">Swedish</option>
+                  <option value="tr">Turkish</option>
                 </select>
             </div>
         </div>
